--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@liveblocks/client": "^1.0.0",
+    "@liveblocks/react": "^1.0.0",
     "@radix-ui/react-toolbar": "^1.0.2",
+    "@reactflow/node-resizer": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.5.6"
